--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
     <title>Time Sheet</title>
     <!-- Firebase Reference -->
-    <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase.js"></script>
+
 
     <!-- Moment.js Reference -->
     <!-- <script src="http://momentjs.com/downloads/moment.js"></script>   -->
@@ -39,8 +40,8 @@
             <div class="col-lg-12">
 
                 <!-- Current Employees-->
-                <div class="panel panel-primary">
-                    <div class="panel-heading">
+                <div class="panel panel-default">
+                    <div class="panel-heading panel-primary">
                         <h3 class="panel-title">
                             <strong>Current Employees</strong>
                         </h3>
@@ -58,14 +59,15 @@
                                 </tr>
                             </thead>
                             <tbody>
+
                             </tbody>
                         </table>
                     </div>
                 </div>
 
                 <!-- Add Employee  -->
-                <div class="panel panel-primary">
-                    <div class="panel-heading">
+                <div class="panel panel-default">
+                    <div class="panel-heading panel-primary">
                         <h3 class="panel-title">
                             <strong>Add Employee</strong>
                         </h3>
